log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: exercises
spec:
  replicas: 5
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      # add permission to read the files
      # securityContext:
      #   runAsUser: 1000        # bun user UID (common in oven/bun image)
      #   runAsGroup: 1000       # bun group GID
      #   fsGroup: 1000          # ensure mounted volume gets group ownership
      #   fsGroupChangePolicy: OnRootMismatch
      # initContainers:
      #   - name: fix-shared-permissions
      #     image: busybox:1.36
      #     command: ["sh","-c","chown -R 1000:1000 /usr/src/app/shared 2>/dev/null || true; chmod -R g+rwX /usr/src/app/shared || true"]
      #     securityContext:
      #       runAsUser: 0       # run as root just for permission change
      #     volumeMounts:
      #       - name: shared-logs
      #         mountPath: /usr/src/app/shared
      # volumes:
      # - name: shared-logs
      #   persistentVolumeClaim:
      #     claimName: log-claim
      containers:
        # - name: log-writer
        #   imagePullPolicy: Never # local image
        #   image: log-output
        #   command: ["bun","run","writer.ts"]
        #   volumeMounts:
        #     - name: shared-logs
        #       mountPath: /usr/src/app/shared

        - name: log-output
          # imagePullPolicy: Never
          # image: log-output
          # image: gcr.io/dwk-gke-484423/log-output:latest
          image: PROJECT/IMAGE
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /readyz
              port: 3000
          volumeMounts:
            #   - name: shared-logs
            #     mountPath: /usr/src/app/shared
            - name: config-volume
              mountPath: /usr/src/app/config
      volumes:
        - name: config-volume
          configMap:
            name: logoutput-configmap
            items:
              - key: information.txt
                path: information.txt

# make sure to build and load the image before (see readme)
# apply changes: kubectl apply -f deployment.yaml
