log_output/manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: log-output
  namespace: exercises
spec:
  hosts:
    - "*"
  gateways:
    - log-output-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: log-output-svc
            port:
              number: 2345
